--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "description": "Simple microservice made with NodeJS",
   "scripts": {
-    "start": "",
-    "start:dev": "nodemon --watch src ./src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./src/index.js",
+    "start:dev": "nodemon --watch src --require dotenv/config ./src/index.js",
+    "test": "jest",
+    "test:dev": "jest",
+    "lint": ""
   },
   "repository": {
     "type": "git",
@@ -21,11 +23,15 @@
   "dependencies": {
     "bluebird": "^3.7.2",
     "express": "^4.17.1",
-    "lodash": "^4.17.21"
+    "helmet": "^4.6.0",
+    "lodash": "^4.17.21",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "dotenv": "^10.0.0",
     "eslint": "^7.32.0",
-    "nodemon": "^2.0.12"
+    "jest": "^27.0.6",
+    "nodemon": "^2.0.12",
+    "supertest": "^6.1.4"
   }
 }
